# ai-todo-app

./: .gitignore  CLAUDE.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d90e771f885_create_task_table.py  a1b2c3d4e5f6_create_chat_tables.py
backend/app/: main.py
backend/app/api/: chat.py  tasks.py
backend/app/chat/: agent.py  context.py  server.py  store.py  tools.py
backend/app/core/: config.py  database.py  security.py
backend/app/mcp/: server.py
backend/app/models/: conversation.py  task.py
backend/app/schemas/: chat.py  task.py
frontend/: CLAUDE.md  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(protected)/: layout.tsx
frontend/components/auth/: sign-out-button.tsx  signin-form.tsx  signup-form.tsx
frontend/components/chat/: chat-interface.tsx
frontend/components/tasks/: delete-dialog.tsx  task-form.tsx  task-item.tsx  task-list.tsx
frontend/lib/: api.ts  auth.ts  chat.ts  validations.ts
history/prompts/001-console-todo-app/: 0001-implementation-plan-console-todo-app.plan.prompt.md  (+4 more)
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-app/: phase-breakdown.md  spec.md
specs/003-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/models/: task.py
src/services/: task_service.py
src/ui/: console.py
(+50 files in other folders)
