[project]
name = "todo"
version = "0.1.0"
description = "Console Todo Application - Phase I"
requires-python = ">=3.13"

[project.scripts]
todo = "src.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "backend",
]
